# Declarative-Pipeline-Builder

./: CMakeLists.txt  CMakePresets.json  README.md
.sisyphus/: boulder.json
.sisyphus/evidence/: task-22-binary-sizes.txt
.sisyphus/notepads/cpp-perf-opt/: learnings.md
.sisyphus/notepads/dual-mode-simd-optimization/: decisions.md  issues.md  learnings.md  problems.md
.sisyphus/notepads/lib-integration/: learnings.md
.sisyphus/plans/: cpp-perf-opt.md  dual-mode-simd-optimization.md  lib-integration.md
.sisyphus/run-continuation/: ses_203da3261ffe5UVNIalh9pwOzF.json
benchmarks/: bench_simd.cpp  benchmark_pipeline.cpp
cmake/: CompilerFlags.cmake  Dependencies.cmake
examples/: async_usage.cpp  basic_usage.cpp  parallel_usage.cpp
include/: declarative_pipeline.hpp  pipeline_stats.hpp  profiler.hpp  thread_pool.hpp
include/dpb/: cpu_detect.hpp  fmt_config.hpp  format.hpp  highway_config.hpp  memory.hpp  pipeline_erase.hpp  portable_attrs.hpp  result.hpp  simd.hpp  simd_filter.hpp  simd_traits.hpp  simd_transform.hpp  tracy_config.hpp
include/pipeline/: concepts.hpp  pipeline.hpp  simd_collect.hpp
include/pipeline/operations/: join.hpp  zip.hpp
tests/: test_async_pipeline.cpp  test_cpu_detect.cpp  test_integration.cpp  test_new_features.cpp  test_parallel_pipeline.cpp  test_perf_monitor.cpp  test_pipeline.cpp  test_pipeline_erase.hpp  test_simd_pipeline.cpp  test_simd_traits.cpp  test_zip_join.cpp
tools/: bench_tool.cpp
